--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="./src/Components/t.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Taharia</title>
+    <title> Taharia B. </title>
   </head>
   <body>
     <div id="root"></div>
